--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ box-sizing: border-box;
 <div class="side-item" onclick="openCategoryView('luisan', event)"> ▸ Luisan</div>
 <div class="side-item" onclick="openCategoryView('khristen', event)"> ▸ Khristen Madui Lui</div>
 <div class="side-item" onclick="openFavouriteView(event)"> ▸ Star⭐List</div>
-<a class="side-item" href="https://ngamlubou.github.io"  target="_blank"
+<a class="side-item" href="https://sites.google.com/view/thiucham/content-info"  target="_blank"
   rel="noopener" > ▸ App Info🔗</div>
 <div id="favPanel">
 <div style="text-align: center;"><u>Star⭐List</u></div> <ul id="favList"></ul></div>
