--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ box-sizing: border-box;
 <div class="side-item" onclick="openCategoryView('khristen', event)"> ▸ Khristen Madui Lui</div>
 <div class="side-item" onclick="openFavouriteView(event)"> ▸ Star⭐List</div>
 <a class="side-item" href="https://sites.google.com/view/thiucham/content-info"  target="_blank"
-  rel="noopener" > ▸ App Info🔗</div>
+  rel="noopener" > ▸ App Info🔗</a></div>
 <div id="favPanel">
 <div style="text-align: center;"><u>Star⭐List</u></div> <ul id="favList"></ul></div>
 <div id="searchOverlay">
