--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <link rel="manifest" href="./manifest.json">
 <style>
     html {
-  font-size: 26px; }
+  font-size: 28px; }
 *, *::before, *::after {
   box-sizing: border-box;
 }
 body {
-  font-family: Open Sans, Arial;
+  font-family: Arial;
   font-size: 1.3rem;   
   line-height: 1.15; 
  padding: 3.5rem 0.75rem 12rem 0.75rem;
@@ -42,7 +42,8 @@ opacity: 0.9;
 }
 .lyrics {white-space: pre-line;
   margin-top: 0.65rem;
-  font-size: 2.08rem;
+font-family: Open Sans;
+  font-size: 2.2rem;
 line-height: 1.3; 
 }
 .top-bar { position: fixed;
@@ -123,7 +124,7 @@ transform: translateZ(0);
 .bottom-bar {  position: fixed;
   bottom: 0; left: 0; right: 0;
   width: 100%;
-  height: 3.6rem;
+  height: 4rem;
   align-items: center;
 box-sizing: border-box;
   display: flex; background: #ffffff;
@@ -131,8 +132,8 @@ box-sizing: border-box;
 }
 .bottom-item { flex: 1;
   text-align: center;
-  height: 3.6rem;
-  line-height: 3.6rem;
+  height: 4rem;
+  line-height: 4rem;
    cursor: pointer; 
   font-size: 1.3rem; border-left: 0.8px solid #000;}
 .bottom-item:first-child {  border-left: none;} 
