Update styles and text in index.html

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ padding-top: 0rem;
   position: absolute;
   left: 4.5rem;
   right: 4.5rem;
-  height: 2rem;  font-size: 1.3rem;
+  height: 2.6rem;  font-size: 1.9rem;
   display: none;
   background-color: #fff;
 }
@@ -94,8 +94,8 @@ width: 100%;
 #sideMenu { position: fixed;
   top: 3.2rem;
   max-height: 80vh; 
-  left: -16rem;
-  width: 16rem; 
+  left: -18rem;
+  width: 18rem; 
 background: #f0f4f9;
 transform: translateZ(0);
   will-change: transform;
@@ -106,7 +106,7 @@ transform: translateZ(0);
 .side-head { padding-top: 0.8rem; padding-left: 1.6rem;
 }
 .side-item { padding: 1rem 0rem 1rem 0.75rem;
-  font-size: 1.4rem;
+  font-size: 1.7rem;
  border-bottom: 1px solid #ddd;
   cursor: pointer;}
 .side-item.active { background: #ffe7ba;
@@ -158,11 +158,11 @@ box-sizing: border-box;
 <div class="side-head"> Category </div>
 <div class="side-item" onclick="openCategoryView('luisan', event)"> ▸ Luisan</div>
 <div class="side-item" onclick="openCategoryView('khristen', event)"> ▸ Khristen Madui Lui</div>
-<div class="side-item" onclick="openFavouriteView(event)"> ▸ Star⭐List</div>
+<div class="side-item" onclick="openFavouriteView(event)"> ▸ Star ⭐</div><br>
 <a class="side-item" href="https://sites.google.com/view/thiucham/content-info"  target="_blank"
-  rel="noopener" > ▸ App Info🔗</a></div>
+  rel="noopener" > ▸ App Info</a></div>
 <div id="favPanel">
-<div style="text-align: center;"><u>Star⭐List</u></div> <ul id="favList"></ul></div>
+<div style="text-align: center;"><u>Star ⭐</u></div> <ul id="favList"></ul></div>
 <div id="searchOverlay">
   <ul id="searchResults"></ul>
 </div>
